syntax = "proto3";

package io.radicalbit.nsdb.rpc;

import "google/protobuf/any.proto";
import "common.proto";

message RPCInsert {
    string database = 1;
    string namespace = 2;
    string metric = 3;
    int64 timestamp = 4;
    oneof value {
        double decimalValue = 5;
        int64 longValue = 6;
    }
    map<string, Dimension> dimensions = 7;
}
